# huggingface_text_summary_v4

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/hf_text_summary/: __init__.py  analysis.py  cli.py  text_extract.py
tests/: test_text_extract.py
