[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hf-text-summary"
version = "0.1.0"
description = "Summarize text, extract key phrases, and infer intent with Hugging Face models."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Team" }]
dependencies = [
  "streamlit>=1.33",
  "transformers>=4.41",
  "torch>=2.1",
  "sentencepiece>=0.2.0",
  "yake>=0.4.8",
  "pypdf>=4.2",
  "python-docx>=1.1",
]

[project.optional-dependencies]
ocr = [
  "pytesseract>=0.3.10",
  "pymupdf>=1.24",
  "pillow>=10.3",
]

[project.optional-dependencies]
# Optional OCR fallback for scanned/image-only PDFs.
# Requires the system Tesseract binary to be installed (see README).
ocr = [
  "pytesseract>=0.3.10",
  "Pillow>=10.0",
  "PyMuPDF>=1.24",
]

[project.scripts]
hf-text-summary = "hf_text_summary.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.isort]
known-first-party = ["hf_text_summary"]
